fix: add vercel domain to security config cors configuration